<resources>
    <string name="app_name">testApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="skills">Скиллы</string>
    <string name="pets">Слуги и питомцы</string>
    <string name="rb">Рейд-боссы и NPC</string>
    <string name="items">Предметы</string>
    <string name="craft_calculator">Калькулятор крафта</string>
</resources>
