<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rss"
            android:title="RSS"/>
        <item
            android:id="@+id/nav_skills"
            android:title="@string/skills"/>
        <item
            android:id="@+id/nav_pets"
            android:title="@string/pets"/>
        <item
            android:id="@+id/nav_rb"
            android:title="@string/rb"/>
        <item
            android:id="@+id/nav_items"
            android:title="@string/items"/>
        <item
            android:id="@+id/nav_calculator"
            android:title="@string/craft_calculator"/>
    </group>
</menu>
